--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "prebuild": "chmod +x node_modules/.bin/vite",
-  "dev": "vite",
-  "build": "vite build",
-  "lint": "eslint .",
-  "preview": "vite preview"
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.7.9",
@@ -16,7 +15,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
-    "react-toastify": "^11.0.3"
+    "react-toastify": "^11.0.3",
+    "vite": "^5.2.11"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
@@ -30,7 +30,6 @@
     "eslint-plugin-react-refresh": "^0.4.18",
     "globals": "^15.14.0",
     "postcss": "^8.5.2",
-    "tailwindcss": "^3.4.17",
-    "vite": "^6.1.0"
+    "tailwindcss": "^3.4.17"
   }
 }
